--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
