--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
-    "styled-components": "^4.0.2"
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
