--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "npm": "^6.4.1",
-    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
-    "reactstrap": "^6.5.0"
+    "react-modal": "^3.6.1",
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
