--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
