--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "npm": "^6.4.1",
     "react": "^16.5.2",
