--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
-    "react-scripts": "2.0.4",
-    "reactstrap": "^6.5.0"
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
