--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.3.4",
+    "@firebase/firestore": "^0.8.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "firebase": "^5.5.7",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
