starting to implement Firebase OAuth for Login with GithHub authentication

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ yarn-debug.log*
 yarn-error.log*
 
 /.vscode
-/src/lib/private
+/src/lib/firebase/firestore/private
+/src/lib/firebase/oauth/private
