--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "classnames": "^2.2.6",
     "firebase": "^5.5.7",
     "npm": "^6.4.1",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-delay": "^0.1.0",
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
