--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,4 @@ yarn-debug.log*
 yarn-error.log*
 
 /.vscode
-/src/lib/firebase/firestore/private
-/src/lib/firebase/oauth/private
+/src/firebase/private
