--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@firebase/app": "^0.3.4",
     "@firebase/firestore": "^0.8.6",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "firebase": "^5.5.7",
     "npm": "^6.4.1",
-    "prop-types": "^15.6.2",
     "react": "^16.5.2",
-    "react-delay": "^0.1.0",
     "react-dom": "^16.5.2",
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
