--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-transition-group": "^2.5.0",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
