--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   ],
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "prettier": "1.14.3"
   }
 }
