--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["react-app", "airbnb-base"],
   "rules": {
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "quotes": "off"
   }
 }
