Played around with ESLint Airbnb and Prettier integration

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
-  "extends": ["react-app", "airbnb-base"],
+  "plugins": ["prettier"],
+  "extends": ["react-app", "airbnb-base", "plugin:prettier/recommended"],
   "rules": {
     "import/extensions": "off",
-    "quotes": "off"
+    "quotes": "off",
+    "object-shorthand": "off"
   }
 }
