--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.7",
     "npm": "^6.4.1",
+    "paths.macro": "^2.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
@@ -31,9 +32,10 @@
   ],
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
-    "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "prettier": "1.14.3"
   }
 }
