--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-transition-group": "^2.5.0",
-    "reactstrap": "^6.5.0",
-    "styled-components": "^4.1.2"
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
