--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@xstate/react": "^0.5.0",
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.7",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "3.0.0",
     "react-transition-group": "^2.5.0",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "xstate": "^4.5.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
