--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dbeining/react-atom": "^4.1.1",
     "@xstate/react": "^0.5.0",
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.7",
