--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@dbeining/react-atom": "^4.1.1",
     "@xstate/react": "^0.5.0",
-    "bootstrap": "^4.1.3",
     "firebase": "^5.5.7",
+    "normalize.css": "^8.0.1",
+    "polished": "^3.3.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.0",
     "react-transition-group": "^2.5.0",
-    "reactstrap": "^6.5.0",
     "xstate": "^4.5.0"
   },
   "scripts": {
