--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@dbeining/react-atom": "^4.1.1",
+    "@emotion/core": "^10.0.10",
     "@xstate/react": "^0.5.0",
     "firebase": "^5.5.7",
     "normalize.css": "^8.0.1",
