--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@dbeining/react-atom": "^4.1.1",
     "@emotion/core": "^10.0.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@xstate/react": "^0.5.0",
     "firebase": "^5.5.7",
     "normalize.css": "^8.0.1",
