--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.0",
     "react-transition-group": "^2.5.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.1",
     "xstate": "^4.5.0"
   },
   "scripts": {
