--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "5.9.1",
     "normalize.css": "^8.0.1",
     "polished": "^3.3.2",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "^4.3.1",
@@ -20,13 +21,16 @@
     "react-transition-group": "^2.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
+    "uuid": "^3.3.2",
     "xstate": "^4.5.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook --ci -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +42,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@storybook/addon-actions": "^5.1.4",
+    "@storybook/addon-links": "^5.1.4",
+    "@storybook/addons": "^5.1.4",
+    "@storybook/react": "^5.1.4",
     "@types/webpack-env": "^1.13.6"
   }
 }
