--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-transition-group": "^2.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
+    "styled-components": "^4.3.1",
     "uuid": "^3.3.2",
     "xstate": "^4.5.0"
   },
