--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@dbeining/react-atom": "^4.1.1",
-    "@emotion/core": "^10.0.10",
+    "@emotion/hash": "^0.7.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@xstate/react": "^0.5.0",
+    "emotion": "^10.0.9",
     "firebase": "5.9.1",
     "normalize.css": "^8.0.1",
     "polished": "^3.3.2",
@@ -21,7 +22,6 @@
     "react-transition-group": "^2.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
-    "styled-components": "^4.3.1",
     "uuid": "^3.3.2",
     "xstate": "^4.5.0"
   },
