--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.0",
     "react-transition-group": "^2.5.0",
+    "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "uuid": "^3.3.2",
